--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "flowbite": "^3.1.2"
+        "@tailwindcss/typography": "^0.5.19",
+        "flowbite": "^3.1.2",
+        "tailwind-clip-path": "^1.0.0"
     }
 }
